<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.lukeboyde.projectofficial.MainActivity">

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/place_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/placeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeName"
        android:text="@string/address"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/placeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeAddress"
        android:text="@string/number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/placeWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeNumber"
        android:text="@string/website"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/placeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeWebsite"
        android:text="@string/type"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/placePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeType"
        android:text="@string/price"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pickPOI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/find_poi"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/powered_by_google_light"/>

</RelativeLayout>
