<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lukeboyde.projectofficial.SaveInterests">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="What are your interests?"
        android:id="@+id/etInterests"
        android:layout_marginTop="30dp"
        android:layout_gravity="top"/>

    <Button
        android:background="@drawable/buttonstylegradient2"
        android:textColor="#fff"
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/saveInterests"
        android:layout_below="@+id/etInterests"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:background="@drawable/buttonstylegradient2"
        android:textColor="#fff"
        android:id="@+id/btn2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/recommendedConnections"
        android:layout_below="@+id/btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:background="@drawable/buttonstylegradient2"
        android:textColor="#fff"
        android:id="@+id/btn3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/viewProfile"
        android:layout_below="@+id/btn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:background="@drawable/buttonstylegradient2"
        android:textColor="#fff"
        android:id="@+id/btn4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Connections"
        android:layout_below="@+id/btn3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonstylegradient2"
        android:text="@string/showInts"
        android:textColor="#fff" />



    <TextView
        android:id="@+id/displayInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn5"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/viewRecommendations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayInterests"/>


</RelativeLayout>
